# spec

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compliance_mapping.yml  config.yml  feature_request.yml
docs/: RMACD_Framework_Diagram.drawio  RMACD_Framework_v1.0.docx  RMACD_Framework_v1.0.md  RMACD_Framework_v1.1.md  RMACD_Framework_v1.2.docx  RMACD_Framework_v1.2.md  implementation.md
schemas/: profile-2d.schema.json  profile-3d.schema.json
schemas/examples/: administrator-3d.json  devops-3d.json  incident-responder-3d.json  monitoring-3d.json  observer-2d.json  observer-3d.json  operations-2d.json
sdk/python/: README.md  pyproject.toml
sdk/python/rmacd/: __init__.py  cli.py  evaluator.py  loader.py  models.py  validator.py
sdk/python/rmacd/registry/: __init__.py  mcp.py  tools.py
sdk/python/tests/: __init__.py  test_evaluator.py
tools-registry/: README.md  example_usage.py  mcp_integration.py  mcp_tools_catalog.json  rmacd_permission_profiles.json  rmacd_tools_catalog.json  rmacd_tools_registry.py  test_registry.py
