[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rmacd"
version = "0.1.0"
description = "RMACD Framework SDK - Policy evaluation for autonomous AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "RMACD Framework Team", email = "rmacdframework@users.noreply.github.com" }
]
keywords = ["rmacd", "ai", "governance", "policy", "autonomous-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/rmacdframework/spec"
Documentation = "https://github.com/rmacdframework/spec/tree/main/sdk/python"
Repository = "https://github.com/rmacdframework/spec"
Issues = "https://github.com/rmacdframework/spec/issues"

[project.scripts]
rmacd = "rmacd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["rmacd"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=rmacd --cov-report=term-missing"
